# company-research-agent

./: .gitignore  BUILD_DOCKER.sh  DEPLOYMENT.md  DOCKER_BUILD_GUIDE.md  Dockerfile  EMAIL_SETUP.md  README.md  company_research_schema.json  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.sh
api/: company_research_fastapi.py  drive_uploader_complete.py  email_service.py
researchers/: multi_source_researcher.py
search_engines/: langgraph_tavily.py  tavily_search.py
static/: index.html
third_party_api/: __init__.py  apollo_organization_api.py  coresignal_multisource_api.py
